--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "my-portfolio-fix",
   "version": "0.1.0",
+  "homepage": "https://wicaker.github.io",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-materialize": "^2.6.0",
+    "react-parallax": "^2.0.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "react-typing-animation": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
