--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-typing-animation": "^1.5.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
